Z-index for whatsapp fixed

--- a/css/main.css
+++ b/css/main.css
@@ -1042,6 +1042,7 @@ footer > span {
   padding: 0.5rem;
   justify-content: center;
   align-items: center;
+  z-index: 3;
 }
 @media (max-width: 50em) {
   .whatsapp__btn {
