--- a/scss/extra/_whatsapp.scss
+++ b/scss/extra/_whatsapp.scss
@@ -10,6 +10,7 @@
     padding: .5rem;
     justify-content: center;
     align-items: center;
+    z-index: 3;
 
     @include respond(tab) {
         bottom: 1rem;
